--- a/src/app/HomePage.module.css
+++ b/src/app/HomePage.module.css
@@ -13,7 +13,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background-image: url('https://your-image-url.com/healthcare-background.jpg'); /* URL ของภาพพื้นหลัง */
+  background-image: url('../app/public/images/page.jpg');
   background-size: cover;
   background-position: center;
   display: flex;
@@ -27,7 +27,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6); /* เงาพื้นหลังเพื่อให้ข้อความเด่นขึ้น */
+  background-color: rgba(69, 67, 67, 0.6); /* เงาพื้นหลังเพื่อให้ข้อความเด่นขึ้น */
 }
 
 .heroContent {
