--- a/src/Navbar.module.css
+++ b/src/Navbar.module.css
@@ -1,6 +1,6 @@
 /* Navbar styles */
 .navbar {
-  background-color: #1abc9c; /* สีหลักของ Navbar */
+  background-color: #7c9590; /* สีหลักของ Navbar */
   display: flex;
   justify-content: space-between;
   align-items: center;
