--- a/src/app/loginmodal/Loginmodal.module.css
+++ b/src/app/loginmodal/Loginmodal.module.css
@@ -16,7 +16,7 @@
 
 .title {
   font-family: Arial, sans-serif;
-  color: #2e7d32; /* สีเขียวสุขภาพ */
+  color: #7c9590; /* สีเขียวสุขภาพ */
   margin-bottom: 20px;
   text-align: center;
   font-size: 2rem;
@@ -35,7 +35,7 @@
 }
 .title {
   font-size: 2rem;
-  color: #2e7d32;
+  color: #7c9590;
   margin-bottom: 20px;
   text-align: center;
 }
