--- a/src/app/admin/appointments/AdminAppointmentsPage.module.css
+++ b/src/app/admin/appointments/AdminAppointmentsPage.module.css
@@ -1,24 +1,29 @@
 
 /* กำหนดพื้นฐานให้กับทั้งหน้า */
-.container {
-  padding: 20px;
-  max-width: 1200px;
-  align-items: center;
-  margin: 0 auto;
-  font-family: Arial, sans-serif;
+.body {
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
+  background-color: #f9f9f9;
+  color: #333;
+  margin: 0;
+  padding: 0;
 }
-  /* Content styling */
-  .contentContainer {
-    background-color: #ffffff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    position: sticky;
-    padding: 30px;
-    width: 100%;
-    max-width: 1100px;
-    margin-top: 20px;
-    margin-left: 50px;
-  }
+.pageContainer{
+  background: linear-gradient(135deg, #eaf6f5, #c3e5e4);
+
+}
+/* Content Container */
+.contentContainer {
+  background-color: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 20px;
+  width: 90%;
+  max-width: 1750px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
   
   /* Title styling */
   .title {
@@ -28,7 +33,11 @@
     text-align: center;
     margin-bottom: 20px;
   }
-  
+  .title2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #7c9590;
+  }
   /* Appointment list styling */
   .appointmentList {
     list-style: none;
@@ -134,6 +143,22 @@
   background-color: #ef9a9a; /* สีแดงจางสำหรับปุ่ม disabled */
 }
 
+
+.searchInput {
+  width: 100%;
+  max-width: 300px;
+  padding: 10px;
+  margin: 20px 0;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 1rem;
+  background-color: #f9f9f9;
+}
+
+.searchInput:focus {
+  border-color: #4b9de0;
+  outline: none;
+}
   /* Media queries for responsive design */
   @media (max-width: 768px) {
     .contentContainer {
